CodeRefactor: ： c++实现类cpp文件拆开

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -21,7 +21,7 @@ set(UnusedForLoopVar_SOURCES
   UnusedForLoopVar/UFLVMatcherPluginAction.cpp UnusedForLoopVar/UnusedForLoopVarASTConsumer.cpp UnusedForLoopVar/UnusedForLoopVarMatcher.cpp UnusedForLoopVar/UnusedForLoopVarVisitor.cpp)
 
 set(CodeRefactor_SOURCES
-  CodeRefactor.cpp)
+  CodeRefactor/CodeRefactorAddPluginAction.cpp CodeRefactor/CodeRefactorASTConsumer.cpp CodeRefactor/CodeRefactorMatcher.cpp )
 
 # CONFIGURE THE PLUGIN LIBRARIES
 # ==============================
