--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -13,7 +13,9 @@ set(ct-la-commenter_SOURCES
 
 set(ct-code-refactor_SOURCES
  "${CMAKE_CURRENT_SOURCE_DIR}/CodeRefactorMain.cpp"
- "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CodeRefactor.cpp"
+ "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CodeRefactor/CodeRefactorAddPluginAction.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/CodeRefactor/CodeRefactorASTConsumer.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/CodeRefactor/CodeRefactorMatcher.cpp"
 )
 
 set(ct-code-style-checker_SOURCES
