Revert "删除其他无关代码：CodeRefactor"
This reverts commit 38b647202da01951d941a38db57d14741e78938c.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,7 @@
 # ======================================================
 set(CLANG_TUTOR_PLUGINS
     CodeStyleChecker
+    CodeRefactor
     )
 
 
@@ -10,6 +11,8 @@ set(CodeStyleChecker_SOURCES
 
 
 
+set(CodeRefactor_SOURCES
+  CodeRefactor/CodeRefactorAddPluginAction.cpp CodeRefactor/CodeRefactorASTConsumer.cpp CodeRefactor/CodeRefactorMatcher.cpp )
 
 # CONFIGURE THE PLUGIN LIBRARIES
 # ==============================
