FindTClkCall_ReadOnly_Visitor加入CMakeLists.txt中

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CLANG_TUTOR_PLUGINS
 
 
 set(CodeStyleChecker_SOURCES
-  CodeStyleChecker/CSCASTAction.cpp CodeStyleChecker/CodeStyleCheckerVisitor.cpp)
+  CodeStyleChecker/CSCASTAction.cpp CodeStyleChecker/CodeStyleCheckerVisitor.cpp CodeStyleChecker/FindTClkCall_ReadOnly_Visitor.cpp)
 
 
 
