--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,25 +15,21 @@ set(CTkAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/CTkAstCnsm.cpp"
 )
 
-# CONFIGURE THE TOOLS
-# ===================
-foreach( tool ${CLANG_TUTOR_TOOLS} )
     # Create a library corresponding to 'plugin'
     add_executable(
-      ${tool}
-      ${${tool}_SOURCES}
+        CTkAlone
+      ${CTkAlone_SOURCES}
       )
 
     # Configure include directories for 'tool'
     target_include_directories(
-      ${tool}
+    CTkAlone
       PRIVATE
       "${CMAKE_CURRENT_SOURCE_DIR}/../include"
     )
 
-    # Link in the required libraries 
+    # Link in the required libraries
     target_link_libraries(
-      ${tool}
+    CTkAlone
       "clangTooling"
     )
-endforeach()
