--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,3 +88,4 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 #===============================================================================
 add_subdirectory(lib)
 add_subdirectory(tools)
+add_subdirectory(t_clock_tick)
