c++11 str.format 改用三方库fmt版本10.0.0: https://github.com/fmtlib/fmt
https://github.com/fmtlib/fmt/tree/10.0.0
https://gitee.com/pubz/fmt/commit/a0b8a92e3d1532361c2f7feb63babc5c18d00ef2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CT_LLVM_CMAKE_FILE "${CT_Clang_INSTALL_DIR}/lib/cmake/clang/ClangConfig.cmak
 list(APPEND CMAKE_PREFIX_PATH "${CT_Clang_INSTALL_DIR}/lib/cmake/clang/")
 
 find_package(Clang REQUIRED CONFIG)
+find_package(fmt REQUIRED)
 
 # Sanity check. As Clang does not expose e.g. `CLANG_VERSION_MAJOR` through
 # AddClang.cmake, we have to use LLVM_VERSION_MAJOR instead.
