c++11 str.format 改用三方库fmt版本10.0.0: https://github.com/fmtlib/fmt

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -18,6 +18,10 @@ set(CTk_SOURCES
       ${CTk_SOURCES}
       )
 
+target_link_libraries(CTk
+        /pubx/fmt/build/libfmt.a
+        )
+
     # Configure include directories for 'plugin'
     target_include_directories(
     CTk
