--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -32,5 +32,5 @@ set(CTkAlone_SOURCES
     target_link_libraries(
     CTkAlone
       "clangTooling"
-    fmt::fmt
+    /pubx/fmt/build/libfmt.a
     )
