--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -9,6 +9,7 @@ MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 set(CTkAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../tools/CTkMain.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/Util.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/LocId.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/CTkVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/FndCTkClROVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/CTkAstAct.cpp"
