--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CTkAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../tools/CTkMain.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/LocId.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/FuncDesc.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/CTkVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/FndCTkClROVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/CTk/CTkAstAct.cpp"
