由于CTkTest没被修改的情况下，不include  t_clock_tick.h, 加t_clock_tick.h到CTkTest_SOURCES中，以方便修改

--- a/t_clock_tick/CMakeLists.txt
+++ b/t_clock_tick/CMakeLists.txt
@@ -4,6 +4,7 @@
 # 3. main.c 调用 thread_local版本 t_clock_tick.cpp
 
 set(CTkTest_SOURCES
+"${CMAKE_CURRENT_SOURCE_DIR}/../t_clock_tick/t_clock_tick.h"
 "${CMAKE_CURRENT_SOURCE_DIR}/../t_clock_tick/t_clock_tick.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../t_clock_tick/test_main.cpp"
 )
