--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 # Doing this at the end so that all definitions and link/include paths are
 # available for the sub-projects.
 #===============================================================================
-add_subdirectory(lib)
-add_subdirectory(tools)
-add_subdirectory(t_clock_tick)
+#add_subdirectory(lib)
+#add_subdirectory(tools)
+add_subdirectory(BrcAlone)
+#add_subdirectory(t_clock_tick)
