--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(LIBFMT_INCLUDE "${LIBFMT_DIR}/include/")
 #set(LIBFMT_STATIC /pubx/fmt/build/libfmt.a)
 set(LIBFMT_STATIC "${LIBFMT_DIR}/build/libfmt.a")
 
+include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
 if (NOT EXISTS "${LIBFMT_STATIC}")
   MESSAGE(FATAL_ERROR "libfmt静态库${LIBFMT_STATIC} 不存在，请参照 build-libfmt.sh 构建libfmt静态库")
 endif()
@@ -100,7 +102,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 # Doing this at the end so that all definitions and link/include paths are
 # available for the sub-projects.
 #===============================================================================
-#add_subdirectory(lib)
+add_subdirectory(lib)
 #add_subdirectory(tools)
 add_subdirectory(BrcAlone)
 #add_subdirectory(t_clock_tick)
