--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,13 +6,8 @@ set(CTk_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/LocId.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/FndBrcFlagCmtHdl.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstAct.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/MyCmtAct.cpp"
+#"${CMAKE_CURRENT_SOURCE_DIR}/../include/Brc/BrcAstCnsm.h"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstCnsm.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../include/Brc/BrcAstCnsm.h"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstCnsm.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/CmtAstAct.cpp"
 )
 
 
