--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBFMT_INCLUDE "${LIBFMT_DIR}/include/")
 set(LIBFMT_STATIC "${LIBFMT_DIR}/build/libfmt.a")
 
 include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/include")
+include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/base_home/include/")
 
 if (NOT EXISTS "${LIBFMT_STATIC}")
   MESSAGE(FATAL_ERROR "libfmt静态库${LIBFMT_STATIC} 不存在，请参照 build-libfmt.sh 构建libfmt静态库")
