--- a/BrcAlone/CMakeLists.txt
+++ b/BrcAlone/CMakeLists.txt
@@ -8,11 +8,11 @@ MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(BrcAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/ActMain.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../BrcAlone/BrcMain.cpp"
+
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../BrcAlone/BrcMain.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcVst.cpp"
-#"${CMAKE_CURRENT_SOURCE_DIR}/../include/Brc/BrcAstCnsm.h"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstCnsm.cpp"
 )
 
@@ -26,7 +26,8 @@ set(BrcAlone_SOURCES
     target_include_directories(
     BrcAlone
       PRIVATE
-      "${CMAKE_CURRENT_SOURCE_DIR}/../include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/include"
     "${LIBFMT_INCLUDE}"
     )
 
