--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,11 +98,5 @@ endif()
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 
-#===============================================================================
-# 4. ADD SUB-TARGETS
-# Doing this at the end so that all definitions and link/include paths are
-# available for the sub-projects.
-#===============================================================================
-add_subdirectory(lib)
-#add_subdirectory(tools)
+add_subdirectory(BrcPlugin)
 add_subdirectory(BrcAlone)
