--- a/BrcPlugin/CMakeLists.txt
+++ b/BrcPlugin/CMakeLists.txt
@@ -3,6 +3,8 @@
 
 
 set(CTk_SOURCES
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstAct.cpp"
+
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcVst.cpp"
