--- a/BrcPlugin/CMakeLists.txt
+++ b/BrcPlugin/CMakeLists.txt
@@ -2,7 +2,7 @@
 # ======================================================
 
 
-set(CTk_SOURCES
+set(Brc_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Brc/BrcAstAct.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
@@ -16,7 +16,7 @@ set(CTk_SOURCES
     add_library(
             BrcPlugin
       SHARED
-      ${CTk_SOURCES}
+      ${Brc_SOURCES}
       )
 
 target_link_libraries(BrcPlugin
