拿到case完整子语句

--- a/TestAlone/CMakeLists.txt
+++ b/TestAlone/CMakeLists.txt
@@ -8,6 +8,8 @@ MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(TestAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../TestAlone/TestAloneMain.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
 
 )
 
@@ -22,6 +24,7 @@ set(TestAlone_SOURCES
     TestAlone
       PRIVATE
     "${LIBFMT_INCLUDE}"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/include/"
     )
 
     # Link in the required libraries
