--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "base_home"]
 	path = base_home
-	url = ssh://git@10.0.4.107:10022/analyze_code/clang-plugin-base.git
+	url = git@gitcode.net:analyze_code/clang-plugin-base.git
