--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "base_home"]
 	path = base_home
-	url = git@gitcode.net:analyze_code/clang-plugin-base.git
+	url = https://gitcode.net/analyze_code/clang-plugin-base.git
