--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "base_home"]
 	path = base_home
-	url = https://gitcode.net/analyze_code/clang-plugin-base.git
+	url = http://giteaz:3000/cl_plg/clang-plugin-base.git
