--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ endif()
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 
-add_subdirectory(BrcPlugin)
-add_subdirectory(BrcAlone)
+add_subdirectory(PlgPlugin)
+add_subdirectory(PlgAlone)
 add_subdirectory(TestAlone)
 add_subdirectory(test_in)
