[3]clang插件名称更改：  brc-->var

--- a/TestAlone/CMakeLists.txt
+++ b/TestAlone/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 
 MESSAGE("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
-#CMAKE_SOURCE_DIR: /pubx/clang-brc/
+#CMAKE_SOURCE_DIR: /pubx/clang-var/
 
 MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
-#CMAKE_CURRENT_SOURCE_DIR: /pubx/clang-brc/tools
+#CMAKE_CURRENT_SOURCE_DIR: /pubx/clang-var/tools
 
 set(TestAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../TestAlone/TestAloneMain.cpp"
