--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,4 @@ add_subdirectory(VarPlugin)
 add_subdirectory(VarAlone)
 add_subdirectory(TestAlone)
 add_subdirectory(test_in)
+add_subdirectory(runtime_VarLsInFn)
