--- a/VarPlugin/CMakeLists.txt
+++ b/VarPlugin/CMakeLists.txt
@@ -7,7 +7,8 @@ set(Var_SOURCES
 
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/FnVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarDeclVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RangeHasMacroAstVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/CollectIncMacro_PPCb.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarAstCnsm.cpp"
