【简单】拆分出1个新Vst；【麻烦】Vst中TraverseFuncDecl中手工遍历CompoundStmt的各子句才能导致TraverseReturnStmt 。
在一个Vst得在TraverseFuncDecl中手工遍历CompoundStmt的各子句才能导致TraverseReturnStmt ，这很麻烦，换成简单办法， 在return紧前插入'销毁语句' 拆分到 RetVst.cpp

--- a/VarPlugin/CMakeLists.txt
+++ b/VarPlugin/CMakeLists.txt
@@ -8,6 +8,7 @@ set(Var_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/FnVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RetVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarDeclVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RangeHasMacroAstVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/CollectIncMacro_PPCb.cpp"
