--- a/VarPlugin/CMakeLists.txt
+++ b/VarPlugin/CMakeLists.txt
@@ -6,6 +6,7 @@ set(Var_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarAstAct.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/StrUtil.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/FnVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RetVst.cpp"
