【草稿中】c运行时

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,4 +64,5 @@ add_subdirectory(VarPlugin)
 add_subdirectory(VarAlone)
 add_subdirectory(TestAlone)
 add_subdirectory(test_in)
+add_subdirectory(runtime_c__vars_fn)
 add_subdirectory(runtime_cpp__vars_fn)
