--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "base_home"]
 	path = base_home
 	url = http://giteaz:3000/cl_plg/clang-plugin-base.git
+[submodule "runtime_c__vars_fn/clibs--list"]
+	path = runtime_c__vars_fn/clibs--list
+	url = http://giteaz:3000/util/clibs--list.git
