[4]【草稿中】c运行时 添加子模块（c语言第三方动态字符串）

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "runtime_c__vars_fn/clibs--list"]
 	path = runtime_c__vars_fn/clibs--list
 	url = http://giteaz:3000/util/clibs--list.git
+[submodule "runtime_c__vars_fn/antirez--sds"]
+	path = runtime_c__vars_fn/antirez--sds
+	url = http://giteaz:3000/util/antirez--sds.git
