--- a/runtime_c__vars_fn/CMakeLists.txt
+++ b/runtime_c__vars_fn/CMakeLists.txt
@@ -1,4 +1,18 @@
 
+cmake_minimum_required(VERSION 3.13.4)
+
+set(CMAKE_C_STANDARD 11)
+
+#Makefile繁琐模式
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS True)
+
+#项目名称
+project(clangPlugin-Var--runtime_c__vars_fn)
+
+
+include("${CMAKE_CURRENT_SOURCE_DIR}/../ClAsCxx.cmake")
 
 MESSAGE("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
 
@@ -18,5 +32,7 @@ set(runtime_c__SOURCES
     runtime_c__test_main
       PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/clibs--list/src"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/antirez--sds/"
     )
 
