c++运行时静态库 clangPlgVar_runtime_cxx

--- a/runtime_cpp__vars_fn/CMakeLists.txt
+++ b/runtime_cpp__vars_fn/CMakeLists.txt
@@ -20,3 +20,13 @@ set(runtime_cpp__SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/include"
     )
 
+# 添加静态库目标
+add_library(clangPlgVar_runtime_cxx STATIC
+        "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/runtime_cpp__vars_fn.cpp"
+        )
+
+# 设置静态库目标的包含目录
+target_include_directories(clangPlgVar_runtime_cxx
+        PUBLIC
+        "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/include"
+        )
